--- a/index.html
+++ b/index.html
@@ -1,114 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>4Food</title>
-  </head>
-  <body>
-    <div class="page-content">
-      <header>
-        <div class="logo-e-texto">
-          <img src="./imagens/icone-4food.png" alt="logo" class="logo" />
-          <div class="titulo">
-            <h3>4Food</h3>
-            <p>Coma bem</p>
-            <p>Sem sair de casa</p>
-          </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>4Food</title>
+</head>
+
+<body>
+  <div class="page-content">
+    <header>
+      <div class="logo-e-texto">
+        <img src="./imagens/icone-4food.png" alt="logo" class="logo" />
+        <div class="titulo">
+          <h3>4Food</h3>
+          <p>Coma bem</p>
+          <p>Sem sair de casa</p>
         </div>
+      </div>
 
-        <nav>
-          <a href="#promocao"><p>Promoção</p></a>
-          <a href="#produtos"><p>Produtos</p></a>
-          <a href="#quem-somos"><p>Quem Somos</p></a>
-          <a href="#faq"><p>Perguntas Frequentes</p></a>
-        </nav>
-        <div class="botoes-login">
-          <button class="login" id="criar-conta">Criar conta</button>
-          <button class="login" id="entrar">Entrar</button>
+      <nav>
+        <a href="#promocao">
+          <p>Promoção</p>
+        </a>
+        <a href="#produtos">
+          <p>Produtos</p>
+        </a>
+        <a href="#quem-somos">
+          <p>Quem Somos</p>
+        </a>
+        <a href="#faq">
+          <p>Perguntas Frequentes</p>
+        </a>
+      </nav>
+      <div class="botoes-login">
+        <button class="login" id="criar-conta">Criar conta</button>
+        <button class="login" id="entrar">Entrar</button>
+      </div>
+    </header>
+
+    <main>
+      <section id="promocao">
+        <img src="./imagens/promocao.webp" alt="promocao" />
+        <div class="titulo-promocao">
+          <h3>Promoção</h3>
+          <h4>Quarta da feira!</h4>
         </div>
-      </header>
+      </section>
 
-      <main>
-        <section id="promocao">
-          <img src="./imagens/promocao.webp" alt="promocao" />
-          <div class="titulo-promocao">
-            <h3>Promoção</h3>
-            <h4>Quarta da feira!</h4>
-          </div>
-        </section>
 
-        <div class="produtos-quemSomos">
-          <section id="produtos">
-            <div class="categorias">Alimentos</div>
-            <div class="categorias">Bebidas</div>
-            <div class="categorias">Utensílios Domésticos</div>
-            <div class="categorias">Limpeza</div>
-          </section>
+      <section id="produtos">
+        <div class="categorias" id="alimentos">Alimentos</div>
+        <div class="categorias" id="bebidas">Bebidas</div>
+        <div class="categorias" id="util-domesticas">Utilidades Domésticos</div>
+        <div class="categorias" id="limpeza">Limpeza</div>
+      </section>
 
-          <section id="quem-somos">
-            <img src="./imagens/quem-somos.png" alt="funcionarios" />
-            <div>
-              <h1>Quem somos?</h1>
-              <p>
-                O 4Food é um projeto de uma grande rede de supermercados que
-                está buscando se digitalizar e criar um sistema de compras e
-                entregas recorrentes por aplicativo. Você precisa criar uma
-                landing page que comunique velocidade e praticidade da solução,
-                destacando a possibilidade de realizar (i) compras de
-                supermercado online e (ii) compras de comidas prontas com uma
-                frequência semanal.
-              </p>
-            </div>
-          </section>
+      <section id="quem-somos">
+        <img src="./imagens/quem-somos.png" alt="funcionarios" />
+        <div>
+          <h1>Quem somos?</h1>
+          <p>
+            Somos uma empresa especializada em alimentação de qualidade. Nossos produtos atendem rigorosos requisitos de
+            qualidade e procedência, e buscamos priorizar pequenos produtores e agricultura familiar. Através do nosso
+            app você pode ter acesso a esses produtos de forma rápida, segura e sem sair de casa.
+
+
+          </p>
+
+      </section>
+  </div>
+
+  <section id="faq">
+    <ul>
+      <li>
+        <input type='checkbox' id='pergunta1'>
+        <label for='pergunta1'>É seguro comprar pelo app?</label>
+
+        <div class='perguntas-frequentes'>
+          <p>Sim,é seguro. Utilizamos um sistema de pagamento usado pelas principais plataformas de e-commerce, e seus
+            dados estarão seguros.</p>
         </div>
+      </li>
+      <li>
+        <input type='checkbox' id='pergunta2'>
+        <label for='pergunta2'>É possível parcelar compras?</label>
 
-        <section id="faq">
-          <ul>
-            <li>Serviço de entregas</li>
-            <li>Pagamentos</li>
-            <li>Devolução</li>
-            <li>Entrega semanal</li>
-          </ul>
-        </section>
-      </main>
-
-      <footer>
-        <div class="redes-sociais">
-          <a href="http://instagram.com.br" target="_blank">
-            <img
-              src="https://icons-for-free.com/iconfiles/png/512/instagram-131979013078668579.png"
-              alt="icone-instagram"
-              class="icone"
-            />
-          </a>
-
-          <a href="http://twitter.com.br" target="_blank">
-            <img
-              src="https://icons-for-free.com/iconfiles/png/512/twitter-131979013536752881.png"
-              alt=""
-              class="icone"
-            />
-          </a>
-          <a href="http://facebook.com.br" target="_blank">
-            <img
-              src="https://icons-for-free.com/iconfiles/png/512/facebook-131979012930159929.png"
-              alt=""
-              class="icone"
-            />
-          </a>
+        <div class='perguntas-frequentes'>
+          <p>Sim, é possível parcelar compras realizadas no cartão de crédito. Nossos meios de pagamento incluem cartão
+            de débito cartão de crédito ou boleto. Lembrando que para pagamentos em boleto, é necessário acrescentar 48h
+            ao prazo de entrega. </p>
         </div>
-
-        <div class="onde-estamos">
-          <p>Av Tomé de Souza</p>
-          <p>Praia do Indaiá - Bertioga</p>
-          <p>(13)XXXX-XXXX</p>
-          <p>contato@4food.com</p>
-          <!-- <img src="./imagens/Capturar.PNG" alt="mapa" class="mapa" /> -->
+      </li>
+      <li>
+        <input type='checkbox' id='pergunta3'>
+        <label for='pergunta3'>O serviço de entrega é gratuito?</label>
+        <div class='perguntas-frequentes'>
+          <p>Nosso serviço de entrega é gratuito para compras a partir de R$100,00. As entregas são realizadas em no
+            máximo 24h após confirmação do pagamento. </p>
         </div>
-      </footer>
+      </li>
+
+    </ul>
+  </section>
+  </main>
+
+  <footer>
+    <div class="redes-sociais">
+      <a href="http://instagram.com.br" target="_blank">
+        <img src="https://icons-for-free.com/iconfiles/png/512/instagram-131979013078668579.png" alt="icone-instagram"
+          class="icone" />
+      </a>
+
+      <a href="http://twitter.com.br" target="_blank">
+        <img src="https://icons-for-free.com/iconfiles/png/512/twitter-131979013536752881.png" alt="" class="icone" />
+      </a>
+      <a href="http://facebook.com.br" target="_blank">
+        <img src="https://icons-for-free.com/iconfiles/png/512/facebook-131979012930159929.png" alt="" class="icone" />
+      </a>
     </div>
-  </body>
+
+    <div class="onde-estamos">
+      <p>Av Tomé de Souza</p>
+      <p>Praia do Indaiá - Bertioga</p>
+      <p>(13)XXXX-XXXX</p>
+      <p>contato@4food.com</p>
+      <!-- <img src="./imagens/Capturar.PNG" alt="mapa" class="mapa" /> -->
+    </div>
+  </footer>
+  </div>
+</body>
+
 </html>
