--- a/index.html
+++ b/index.html
@@ -52,10 +52,18 @@
 
 
       <section id="produtos">
-        <div class="categorias" id="alimentos">Alimentos</div>
-        <div class="categorias" id="bebidas">Bebidas</div>
-        <div class="categorias" id="util-domesticas">Utilidades Domésticos</div>
-        <div class="categorias" id="limpeza">Limpeza</div>
+        <div class="categorias" id="alimentos"><img src="./imagens/alimentos.jpg" alt="">
+        <h5>Alimentos</h5>
+        </div>
+        <div class="categorias" id="bebidas"><img src="./imagens/bebidas.jpg" alt="">
+        <h5>Bebidas</h5>
+        </div>
+        <div class="categorias" id="util-domesticas"><img src="./imagens/cama-mesa.jpg" alt="">
+        <h5>Utensílios Domésticos</h5>
+        </div>
+        <div class="categorias" id="limpeza"><img src="./imagens/limpeza.jpeg" alt="">
+        <h5>Limpeza</h5>
+        </div>
       </section>
 
       <section id="quem-somos">
@@ -74,6 +82,7 @@
   </div>
 
   <section id="faq">
+    <h3>Perguntas frequentes</h3>
     <ul>
       <li>
         <input type='checkbox' id='pergunta1'>
